<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".SignUp" >



    <EditText
        android:id="@+id/u_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@+id/editTextTextPersonName2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:hint="@string/Name"
        android:textColorHint="#8AFFFFFF"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@+id/editTextTextPersonName3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:hint="@string/phone"
        android:textColorHint="#8AFFFFFF"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@+id/editTextTextPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:hint="@string/email"
        android:textColorHint="#8AFFFFFF"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:inputType="textPassword"
        android:padding="12dp"
        android:hint="@string/Password"
        android:textColorHint="#8AFFFFFF"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/custom_button"
        android:fontFamily="serif-monospace"
        android:paddingLeft="20pt"
        android:paddingRight="20pt"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="281dp"
        android:background="@drawable/custom_back_button"
        android:fontFamily="serif-monospace"
        android:text="@string/back_bt"
        android:textColor="@color/white"
        app:backgroundTint="@null" />
</RelativeLayout>